public/css/styles.css
body {
    font-family: 'Roboto', sans-serif;
    background-color: #1e2129;
}

h1 {
    color: #fff;
    text-align: center;
}

/* Search Bar */
.search-bar {
    padding: 35px 15px;
    text-align: center;
}

input#search-bar {
    border-radius: 12px;
    -webkit-appearance: none;
    border: 1px solid #d6d6d6;
    padding: 10px 30px;
    margin: 0 10px;
}

.btn-primary {
    background-color: #00acc1 !important;
    border: none;
    padding: 10px 20px;
    border-radius: 12px;
}

*:focus {
    outline: none !important;
    box-shadow: none !important;
}

.modal h3, .modal h4 {
    color: #fff;
    margin-bottom: 10px;
}

.card-img-top {
    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.2);
    filter: brightness(40%);
    -webkit-filter: brightness(40%);
}

.card-img-overlay {
    margin: 10px 0;
}

span.badge {
    margin-right: 5px;
}


p.card-text {
    color: #fff;
}

.movie-list-container {
    margin: 0 auto;
}

.movie-item-container img {
    max-width: 280px;
}

.movie-item-container h6 {
    font-size: 12px;
}

.movie-item-container {
    max-width: 280px;
    padding: 10px;
    margin: 20px;
    max-width: 300px;
    background: white;
    overflow: hidden;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
    -webkit-transition: .25s box-shadow;
    transition: .25s box-shadow;
    margin-bottom: 20px;
  }

